include/ghostty.h

typedef void* ghostty_surface_t;
typedef enum {
  GHOSTTY_MOUSE_RELEASE,
  GHOSTTY_MOUSE_PRESS,
} ghostty_input_mouse_state_e;
typedef enum {
  GHOSTTY_MOUSE_UNKNOWN,
  GHOSTTY_MOUSE_LEFT,
  GHOSTTY_MOUSE_RIGHT,
  GHOSTTY_MOUSE_MIDDLE,
  GHOSTTY_MOUSE_FOUR,
  GHOSTTY_MOUSE_FIVE,
  GHOSTTY_MOUSE_SIX,
  GHOSTTY_MOUSE_SEVEN,
  GHOSTTY_MOUSE_EIGHT,
  GHOSTTY_MOUSE_NINE,
  GHOSTTY_MOUSE_TEN,
  GHOSTTY_MOUSE_ELEVEN,
} ghostty_input_mouse_button_e;
// This is a packed struct (see src/input/mouse.zig) but the C standard
// afaik doesn't let us reliably define packed structs so we build it up
// from scratch.
typedef int ghostty_input_scroll_mods_t;
typedef enum {
  GHOSTTY_MODS_NONE = 0,
  GHOSTTY_MODS_SHIFT = 1 << 0,
  GHOSTTY_MODS_CTRL = 1 << 1,
  GHOSTTY_MODS_ALT = 1 << 2,
  GHOSTTY_MODS_SUPER = 1 << 3,
  GHOSTTY_MODS_CAPS = 1 << 4,
  GHOSTTY_MODS_NUM = 1 << 5,
  GHOSTTY_MODS_SHIFT_RIGHT = 1 << 6,
  GHOSTTY_MODS_CTRL_RIGHT = 1 << 7,
  GHOSTTY_MODS_ALT_RIGHT = 1 << 8,
  GHOSTTY_MODS_SUPER_RIGHT = 1 << 9,
} ghostty_input_mods_e;
typedef struct {
  ghostty_input_action_e action;
  ghostty_input_mods_e mods;
  ghostty_input_mods_e consumed_mods;
  uint32_t keycode;
  const char* text;
  uint32_t unshifted_codepoint;
  bool composing;
} ghostty_input_key_s;
typedef struct {
  double tl_px_x;
  double tl_px_y;
  uint32_t offset_start;
  uint32_t offset_len;
  const char* text;
  uintptr_t text_len;
} ghostty_text_s;
typedef struct {
  ghostty_point_s top_left;
  ghostty_point_s bottom_right;
  bool rectangle;
} ghostty_selection_s;
typedef struct {
  uint16_t columns;
  uint16_t rows;
  uint32_t width_px;
  uint32_t height_px;
  uint32_t cell_width_px;
  uint32_t cell_height_px;
} ghostty_surface_size_s;
GHOSTTY_API void ghostty_surface_set_content_scale(ghostty_surface_t, double, double);
GHOSTTY_API void ghostty_surface_set_focus(ghostty_surface_t, bool);
GHOSTTY_API void ghostty_surface_set_occlusion(ghostty_surface_t, bool);
// Returns the DirectComposition surface handle backing this surface's swap
// chain in SwapChainPanel mode. Bind it to a WinUI 3 SwapChainPanel via
// ISwapChainPanelNative2::SetSwapChainHandle. Returns NULL on non-DX12
// builds or when the surface is not in SwapChainPanel mode. Ghostty owns
// the handle for the surface lifetime -- do NOT CloseHandle it.
GHOSTTY_API void* ghostty_surface_get_swap_chain_handle(ghostty_surface_t);
// Snapshot of the shared-texture state for a surface. All fields are
// filled in atomically by a single ghostty_surface_shared_texture()
// call so consumers never observe a torn read.
//
// Ownership: ghostty retains both NT HANDLEs in this struct for the
// surface lifetime -- do NOT CloseHandle either of them. The
// ID3D12Resource and ID3D12Fence returned by OpenSharedHandle on the
// consumer's device ARE owned by the consumer; Release() them when
// done, and re-open the resource whenever `version` changes.
typedef struct {
  // NT HANDLE from CreateSharedHandle on the underlying ID3D12Resource.
  // Consumers open via ID3D12Device::OpenSharedHandle on their own
  // device (cross-device) or on ghostty's device (same-device).
  void* resource_handle;

  // NT HANDLE from CreateSharedHandle on ghostty's ID3D12Fence. Stable
  // for the surface lifetime (does not change on resize).
  void* fence_handle;

  // Fence value ghostty will signal after completing the most recently
  // submitted frame. Consumers Wait for this value on their own
  // command queue before sampling the resource.
  uint64_t fence_value;

  // Pixel dimensions of the shared resource. These match the size the
  // renderer most recently (re)created the resource at, and stay in
  // sync with `version` -- they change in the same atomic snapshot.
  uint32_t width;
  uint32_t height;

  // Monotonically increasing counter, incremented whenever the shared
  // resource is recreated (initial creation, resize, device-removed
  // recovery). Re-open the shared handle whenever this changes.
  uint64_t version;
} ghostty_surface_shared_texture_s;
// Fill `out` with the current shared-texture state for this surface.
// Returns true on success, false if the surface is not in shared
// texture mode (in which case `out` is left untouched). The read is
// atomic -- all fields correspond to the same renderer state snapshot.
GHOSTTY_API bool ghostty_surface_shared_texture(
    ghostty_surface_t,
    ghostty_surface_shared_texture_s* out);
GHOSTTY_API ghostty_surface_size_s ghostty_surface_size(ghostty_surface_t);
GHOSTTY_API uint64_t ghostty_surface_foreground_pid(ghostty_surface_t);
GHOSTTY_API bool ghostty_surface_key(ghostty_surface_t, ghostty_input_key_s);
GHOSTTY_API void ghostty_surface_text(ghostty_surface_t, const char*, uintptr_t);
GHOSTTY_API void ghostty_surface_preedit(ghostty_surface_t, const char*, uintptr_t);
GHOSTTY_API bool ghostty_surface_mouse_captured(ghostty_surface_t);
GHOSTTY_API bool ghostty_surface_mouse_button(ghostty_surface_t,
                                                 ghostty_input_mouse_state_e,
                                                 ghostty_input_mouse_button_e,
                                                 ghostty_input_mods_e);
GHOSTTY_API void ghostty_surface_mouse_pos(ghostty_surface_t,
                                              double,
                                              double,
                                              ghostty_input_mods_e);
GHOSTTY_API void ghostty_surface_mouse_scroll(ghostty_surface_t,
                                                 double,
                                                 double,
                                                 ghostty_input_scroll_mods_t);
GHOSTTY_API bool ghostty_surface_has_selection(ghostty_surface_t);
GHOSTTY_API bool ghostty_surface_read_selection(ghostty_surface_t, ghostty_text_s*);
GHOSTTY_API bool ghostty_surface_read_text(ghostty_surface_t,
                                              ghostty_selection_s,
                                              ghostty_text_s*);
GHOSTTY_API void ghostty_surface_free_text(ghostty_surface_t, ghostty_text_s*);
// The viewport as row-major resolved cells. `cells` has `rows*cols` entries
// and is owned by libghostty; free it with ghostty_surface_free_cells.
typedef struct {
  ghostty_cell_s* cells;
  uint16_t rows;
  uint16_t cols;
  // Cursor in viewport coordinates, resolved under the same renderer-lock hold
  // as the cells. Valid only when cursor_in_viewport is true; false means the
  // cursor is below the viewport (it only ever scrolls up into scrollback).
  uint16_t cursor_row;
  uint16_t cursor_col;
  bool cursor_in_viewport;
} ghostty_cells_s;
GHOSTTY_API bool ghostty_surface_read_cells(ghostty_surface_t, ghostty_cells_s*);
GHOSTTY_API void ghostty_surface_free_cells(ghostty_surface_t, ghostty_cells_s*);