windows/Ghostty/Interop/NativeMethods.cs


    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_content_scale")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceSetContentScale(GhosttySurface surface, double x, double y);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_focus")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceSetFocusNative(GhosttySurface surface, byte focused);

    internal static void SurfaceSetFocus(GhosttySurface surface, bool focused)
        => SurfaceSetFocusNative(surface, focused ? (byte)1 : (byte)0);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_occlusion")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceSetOcclusionNative(GhosttySurface surface, byte occluded);

    internal static void SurfaceSetOcclusion(GhosttySurface surface, bool occluded)
        => SurfaceSetOcclusionNative(surface, occluded ? (byte)1 : (byte)0);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_size")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttySurfaceSize SurfaceSize(GhosttySurface surface);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_read_cells")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceReadCellsNative(GhosttySurface surface, out GhosttyCells cells);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_free_cells")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceFreeCellsNative(GhosttySurface surface, ref GhosttyCells cells);

    /// <summary>
    /// Read the viewport cells (codepoint + resolved fg/bg) for a surface. Copies
    /// into a managed grid and frees the native buffer. Returns null on failure.
    /// </summary>
    internal static Ghostty.Core.Tabs.CellGrid? SurfaceReadCells(GhosttySurface surface)
    {
        if (SurfaceReadCellsNative(surface, out var native) == 0) return null;
        try
        {
            int rows = native.Rows, cols = native.Cols;
            // Rows/Cols are ushort; compute in long so a malformed native return
            // can't overflow int and yield a CellGrid whose dimensions outrun its
            // cell array. Cap at a sane cell budget (any real viewport is tiny).
            long total = (long)rows * cols;
            if (total <= 0 || total > 1_000_000) return null;
            var n = (int)total;

            var managed = new Ghostty.Core.Tabs.Cell[n];
            if (native.Cells != IntPtr.Zero)
            {
                unsafe
                {
                    var p = (GhosttyCell*)native.Cells;
                    for (var i = 0; i < n; i++)
                    {
                        var fg = (uint)((p[i].FgR << 16) | (p[i].FgG << 8) | p[i].FgB);
                        var bg = (uint)((p[i].BgR << 16) | (p[i].BgG << 8) | p[i].BgB);
                        managed[i] = new Ghostty.Core.Tabs.Cell(p[i].Codepoint, fg, bg);
                    }
                }
            }
            return new Ghostty.Core.Tabs.CellGrid(
                managed, rows, cols,
                native.CursorRow, native.CursorCol, native.CursorInViewport != 0);
        }
        finally
        {
            SurfaceFreeCellsNative(surface, ref native);
        }
    }

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_read_text")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceReadTextNative(GhosttySurface surface, GhosttySelection sel, out GhosttyText text);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_read_selection")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceReadSelectionNative(GhosttySurface surface, out GhosttyText text);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_free_text")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void SurfaceFreeTextNative(GhosttySurface surface, ref GhosttyText text);

    // A whole-region selection (top-left -> bottom-right) over the given point space.
    private static GhosttySelection WholeRegion(GhosttyPointTag tag) => new()
    {
        TopLeft = new GhosttyPoint { Tag = tag, Coord = GhosttyPointCoord.TopLeft, X = 0, Y = 0 },
        BottomRight = new GhosttyPoint { Tag = tag, Coord = GhosttyPointCoord.BottomRight, X = 0, Y = 0 },
        Rectangle = 0,
    };

    private static string CopyAndFree(GhosttySurface surface, ref GhosttyText native)
    {
        try
        {
            if (native.Text == IntPtr.Zero) return "";
            var len = (int)native.TextLen;
            return len <= 0 ? "" : (Marshal.PtrToStringUTF8(native.Text, len) ?? "");
        }
        finally
        {
            SurfaceFreeTextNative(surface, ref native);
        }
    }

    /// <summary>
    /// Read the full screen contents (scrollback + viewport) as a string for
    /// accessibility. Returns "" on failure. Takes the renderer mutex; callers
    /// must cache + throttle.
    /// </summary>
    internal static string SurfaceReadScreenText(GhosttySurface surface)
    {
        if (SurfaceReadTextNative(surface, WholeRegion(GhosttyPointTag.Screen), out var native) == 0) return "";
        return CopyAndFree(surface, ref native);
    }

    /// <summary>
    /// Read the current selection's text and its flattened-viewport offsets.
    /// Returns null when there is no selection.
    /// </summary>
    internal static (string Text, uint OffsetStart, uint OffsetLen)? SurfaceReadSelection(GhosttySurface surface)
    {
        if (SurfaceReadSelectionNative(surface, out var native) == 0) return null;
        var start = native.OffsetStart;
        var len = native.OffsetLen;
        var text = CopyAndFree(surface, ref native);
        return (text, start, len);
    }

    // Returns the pid of the foreground process attached to the pty, or
    // 0 when the platform-specific pty layer cannot report it. On
    // Windows today this returns 0 (WindowsPty.getProcessInfo is a
    // stub); the binding still lives here so the active-process tracker
    // can poll without owning the libghostty call site.
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_foreground_pid")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial ulong SurfaceForegroundPid(GhosttySurface surface);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_shared_texture")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceSharedTextureNative(
        GhosttySurface surface,
        out GhosttySharedTextureSnapshot snapshot);

    internal static bool SurfaceSharedTexture(GhosttySurface surface, out GhosttySharedTextureSnapshot snapshot)
        => SurfaceSharedTextureNative(surface, out snapshot) != 0;

    // Returns the DirectComposition surface handle backing this surface's
    // swap chain in SwapChainPanel mode, or IntPtr.Zero on non-DX12 builds
    // or before the swap chain is created. Bind it to the SwapChainPanel
    // via ISwapChainPanelNative2::SetSwapChainHandle. Ghostty owns the
    // handle for the surface lifetime - do not close it.
    [LibraryImport(Dll, EntryPoint = "ghostty_surface_get_swap_chain_handle")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial IntPtr SurfaceGetSwapChainHandle(GhosttySurface surface);

    // ---- surface input -------------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_key")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceKeyNative(GhosttySurface surface, GhosttyInputKey key);

    internal static bool SurfaceKey(GhosttySurface surface, GhosttyInputKey key)
        => SurfaceKeyNative(surface, key) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_text")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceText(GhosttySurface surface, IntPtr utf8, UIntPtr len);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_preedit")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfacePreedit(GhosttySurface surface, IntPtr utf8, UIntPtr len);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_mouse_button")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceMouseButtonNative(
        GhosttySurface surface,
        GhosttyMouseState state,
        GhosttyMouseButton button,
        GhosttyMods mods);

    internal static bool SurfaceMouseButton(
        GhosttySurface surface,
        GhosttyMouseState state,
        GhosttyMouseButton button,
        GhosttyMods mods)
        => SurfaceMouseButtonNative(surface, state, button, mods) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_mouse_pos")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceMousePos(GhosttySurface surface, double x, double y, GhosttyMods mods);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_mouse_captured")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceMouseCapturedNative(GhosttySurface surface);

    /// <summary>
    /// True when the running program has enabled mouse reporting and is
    /// capturing mouse events (e.g. vim/tmux with mouse mode). The apprt
    /// uses this to decide whether a right-click belongs to the program or
    /// should open our context menu.
    /// </summary>
    internal static bool SurfaceMouseCaptured(GhosttySurface surface)
        => SurfaceMouseCapturedNative(surface) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_has_selection")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte SurfaceHasSelectionNative(GhosttySurface surface);

    /// <summary>
    /// True when the surface currently has a non-empty text selection. Used
    /// to enable the context-menu "Copy" item only when there is something
    /// to copy.
    /// </summary>
    internal static bool SurfaceHasSelection(GhosttySurface surface)
        => SurfaceHasSelectionNative(surface) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_mouse_scroll")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceMouseScroll(GhosttySurface surface, double x, double y, int scrollMods);
